# claude-token-analyzer

./: .gitignore  .mcp.json  CLAUDE.md  README.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml  test.yml
docs/: codex-testing.md  promotion-research.md  rust-plugin-binary-distribution-research.md
docs/promotion/: awesome-list-entries.md  discord-post.md  mcp-directory-descriptions.md  metrics-log.md  reddit-post.md  show-hn.md
docs/usage-pattern-analysis/: FEATURE-REGISTRY.md  PLAN.md  SPEC.md
hooks/: hooks.json
mcp-server/: Cargo.toml
mcp-server/config/: pricing.toml
mcp-server/src/: analyzer.rs  archiver.rs  cli_lib.rs  config.rs  detector.rs  format.rs  lib.rs  parser.rs  pattern_classifier.rs  pattern_signals.rs  pricing.rs  session_finder.rs  sparkline.rs  storage.rs  test_utils.rs  types.rs
mcp-server/tests/: cli_unit.rs  integration.rs  pattern_classifier.rs  pattern_signals.rs  signal_recommendation_mapping.rs
mcp-server/tests/fixtures/: compression-session.jsonl  false-positive-cache-drop.jsonl  large-session.jsonl  malformed.jsonl  multi-model-session.jsonl  no-assistant-records.jsonl  simple-session.jsonl  subagent-session.jsonl  unknown-fields.jsonl
scripts/: build.sh  install-codex-cta-skills.sh  install-codex-test-assets.sh  install.sh  run-codex.sh  run.sh
skills/cta-anomaly-hunt/: SKILL.md
skills/cta-cost-audit/: SKILL.md
skills/cta-health-check/: SKILL.md
skills/cta-project-review/: SKILL.md
worklog/: session-c3362888-review-2026-04-14.md  usage-pattern-analysis-execution.md
(+11 files in other folders)
